--- a/od/Montemedia/css/style.css
+++ b/od/Montemedia/css/style.css
@@ -2,11 +2,21 @@
 body {
   background: #E6E6E6;
   cursor:default;
+  margin:0;
 }
 
 #content {
     display:none;
+    padding:8px;
 }
+
+#seitentitel{
+    position:absolute;
+    width:100%;
+    text-align:center;
+}
+
+
 .compass {
     display:none;
 }
@@ -18,13 +28,34 @@ body {
 
 #tip, #info {
     position:absolute;
-    z-index:1000;
     margin-top:200px;
     text-align:center;
     width:100%;
 }
+#tip {
+    z-index:1000;
+}
 
-#tip p, #info p{
+#info {
+    cursor:pointer;
+    z-index:1001;
+    display:none;
+}
+
+#cover {
+    position:absolute;
+    z-index:1000;
+    text-align:center;
+    background:#fff;
+    opacity:0.8;
+    width:100%;
+    height:100%;
+    cursor:pointer;
+    top: 0;
+    display:none;
+}
+
+#tip p, #info div{
     border:1px solid black;
     background:#fff;
     opacity:0.8;
@@ -33,17 +64,11 @@ body {
     margin: 0 auto;
     text-align:center;
 }
-#info {
-    display:none;
-    cursor:pointer;
-}
 
-#info p{
+
+#info div{
     width:400px;
     opacity:1;
-}
-#close {
-    float:right;
 }
 
 #infolink {
